# voice-input

./: .gitignore  Makefile  README.md  audio-recorder.py  audio_recorder.py  build-binary.sh  build_linux.sh  groq_services.py  main.py  pyproject.toml  requirements.txt
